# seamful

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/modular/: __init__.py  errors.py
src/modular/application/: __init__.py  application.py  errors.py  graph_provider.py  graph_solver.py  registry.py  test_container.py
src/modular/container/: __init__.py  container.py  errors.py  graph_provider.py  graph_solver.py  registry.py  test_container.py
src/modular/module/: errors.py  module_type.py  test_module.py
src/modular/provider/: errors.py  provider_type.py  test_provider.py
src/modular/resource/: __init__.py
src/modular/resources/: errors.py
src/seamful/: __init__.py  errors.py  utils_for_tests.py
src/seamful/application/: application.py  errors.py  graph_provider.py  graph_solver.py  registry.py  test_application.py  test_container.py
src/seamful/module/: errors.py  module_type.py  test_module.py
src/seamful/provider/: __init__.py  errors.py  provider_type.py  test_provider.py
src/seamful/resource/: __init__.py
src/wiring/: container.py  errors.py  module.py  provider.py  resource.py  test_container.py  test_module.py  test_provider.py  test_resources.py  utils_for_tests.py
src/wiring/container/: __init__.py  container.py  core_container.py  errors.py  graph_provider.py  graph_solver.py  raw_container.py  registry.py  test_container.py
src/wiring/module/: __init__.py  errors.py  module_type.py  test_module.py
src/wiring/provider/: __init__.py  errors.py  provider.py  provider_type.py  test_provider.py
(+244 files in other folders)
