[tool.poetry]
name = "wiring"
version = "0.1.0"
description = "Dependency management for python"
authors = ["Rafael Darder <darder@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
tox = "^4.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
