[tool.poetry]
name = "seamful"
version = "0.2.0"
description = "Dependency management for python"
authors = ["Rafael Darder <darder@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rdarder/seamful"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
